--- a/ansible/playbooks/templates/opt/noggin/noggin.cfg
+++ b/ansible/playbooks/templates/opt/noggin/noggin.cfg
@@ -21,3 +21,4 @@ MAIL_SUPPRESS_SEND = False
 AVATAR_SERVICE_URL = "https://seccdn.libravatar.org/"
 AVATAR_DEFAULT_TYPE = "retro"
 FEDORA_MESSAGING_ENABLED = False
+USERNAME_BLOCKLIST = ['root']
